--- a/portfolio.html
+++ b/portfolio.html
@@ -9,15 +9,169 @@
 <body>
     <h1>sra<span class="name">van</span></h1>
     <div class="banner">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, exercitationem quos.</div>
-    <div class="posters"></div>
+    <section>
+        <h1>Films</h1>
+    <div class="posters">
+    <div class="new">
     <img src="https://occ-0-4857-2186.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABauaf_pjBXX9G_dl-IYBIWLYWexsTpaSGU0ulKaCMLmsn_ew6nmLGev9nFJJ7bRDMaKAGE0G2Egdgy30VgHbVI7c0-IeOxmMp5j-0AoMIuToZbPzDmGzCQjZIN_OLvtEARjE.jpg?r=3e4" alt="" class="posters">
+    <h3>Queen Of Tears</h3>
+    </div>
+    <div class="new">
     <img src="https://occ-0-4857-2164.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABQNcmvqUa298uWoIvfqlHQQ2pXCGJtM8MBPOWX2yVC394ityzKyt1cfWE-TZmUa6mhX5BYJ_2d5_MQijbUyIMcnsk0OxjrCYHgexbDwN_jwuDyhWWYwx6aVHUplBAYfBJ3PU.jpg?r=ed2" alt="" class="posters">
+    <h3>Lift</h3>
+    </div>
+    <div class="new">
     <img src="https://occ-0-4857-2164.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABc_QuOdHzJa9WwBiBlfEvpcFRKq9TAIgdJv0KoSilQZ8JMEsdCdQS4VGD6gwVg2CYCYNhTJIald5uVsXbMf-3QaF1k1fnFRbovQr6ddWUtkSOUzil_dtlD1wOIeD_pSI6pAx.jpg?r=c68" alt="" class="posters">
+    <h3>Stranger Things</h3>
+    </div>
+    <div class="new">
     <img src="https://occ-0-4857-2164.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABUmLgKmFrl2Tq5jDmIBIdp-L6_fRFsTE7KslWARHa4Yb8f8q32MOBiACOoYAGFn4k8Pc_1P7QlN-F41Btkx4q8bp2gg0yA4kCWxamkIcyRVtyIoln6PDWQVi1_IAZHe4PALj.jpg?r=326" alt="" class="posters">
+    <h3>Money Heist</h3>
+    </div>
+    <div class="new">
     <img src="https://occ-0-4857-2164.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABc5URtqG36cHmUzXPrn9qaN1prCdZB3Llrhe8w4fvPKUxMp1phgN738mP1ctTe9QshMH8f0NlK-GdSAZDYJpXtvofUffd8o4BQuB7AKZogG-KbG0kR5H5w9kp3pXbogjGHSN.jpg?r=082" alt="" class="posters">
+    <h3>Wednesday</h3>
+    </div>
+    <div class="new">
     <img src="https://occ-0-4857-2164.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABQEjJfnMi9TXaKoF9qCwqJFr7u4os-0jU4BdQtPpKqA4qlXipyQRbn6x12tiWr3G93tqhHmT_tHefwiPgvORm0tOeEsw-6ZezuwbiWZ6iih6sdwapOruT1QksFSIehXBscq6.jpg?r=5ad" alt="" class="posters">
+    <h3>It's Okay to Not Be Okay</h3>
+    </div>
+    <div class="new">
     <img src="https://occ-0-4857-2164.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABR871v8B_5W4-2bL3zy0-l1jI1d_kDdYwjnAQXO84kUMxrrbFDunGwXrJN1H_TbQ3qqap3HbzIMjw8HyQuWDGhfgHarGKPtE6JfLZ-awelcRb_ipCja19iEU7yNWXTtp7yvN.jpg?r=347" alt="" class="posters">
+    <h3>Red Notice</h3>
+    </div>
+    <div class="new">
     <img src="https://occ-0-4857-2164.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABf5exow7YR19ou4F_Afma6lC9npbAZqCyzMa2cU0HVaz0mmeAQ5CkqLy_e8zNzjbZrbug44-W3LpYw4Ne-eVmcQD6n0VIJAw20tvFpphszMy_p5IiA-vBMtBr2n2BPbxuyml.jpg?r=23e" alt="" class="posters">
+    <h3>The Witcher</h3>
+    </div>
+    <div class="new">
     <img src="https://occ-0-4857-2164.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABfs1djP8b2Vh7ZxtdDBlxo95LAcA11SMdWDsjUKAGawvmsguEnVs15dCDUVxLUZwFJDlTNDDUCxfqvyN-lbOgH08c2fGXNKir-hUbWir55Gi2SSIrsQBMMhxmhhwqY4MLYTs.jpg?r=1d3" alt="" class="posters">
+    <h3>Ginny And Georgia</h3>
+    </div>
+    </div>
+    </section>
+    <section>
+        <h1>Films</h1>
+    <div class="posters">
+    <div class="new">
+    <img src="https://occ-0-4857-2186.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABauaf_pjBXX9G_dl-IYBIWLYWexsTpaSGU0ulKaCMLmsn_ew6nmLGev9nFJJ7bRDMaKAGE0G2Egdgy30VgHbVI7c0-IeOxmMp5j-0AoMIuToZbPzDmGzCQjZIN_OLvtEARjE.jpg?r=3e4" alt="" class="posters">
+    <h3>Queen Of Tears</h3>
+    </div>
+    <div class="new">
+    <img src="https://occ-0-4857-2164.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABQNcmvqUa298uWoIvfqlHQQ2pXCGJtM8MBPOWX2yVC394ityzKyt1cfWE-TZmUa6mhX5BYJ_2d5_MQijbUyIMcnsk0OxjrCYHgexbDwN_jwuDyhWWYwx6aVHUplBAYfBJ3PU.jpg?r=ed2" alt="" class="posters">
+    <h3>Lift</h3>
+    </div>
+    <div class="new">
+    <img src="https://occ-0-4857-2164.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABc_QuOdHzJa9WwBiBlfEvpcFRKq9TAIgdJv0KoSilQZ8JMEsdCdQS4VGD6gwVg2CYCYNhTJIald5uVsXbMf-3QaF1k1fnFRbovQr6ddWUtkSOUzil_dtlD1wOIeD_pSI6pAx.jpg?r=c68" alt="" class="posters">
+    <h3>Stranger Things</h3>
+    </div>
+    <div class="new">
+    <img src="https://occ-0-4857-2164.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABUmLgKmFrl2Tq5jDmIBIdp-L6_fRFsTE7KslWARHa4Yb8f8q32MOBiACOoYAGFn4k8Pc_1P7QlN-F41Btkx4q8bp2gg0yA4kCWxamkIcyRVtyIoln6PDWQVi1_IAZHe4PALj.jpg?r=326" alt="" class="posters">
+    <h3>Money Heist</h3>
+    </div>
+    <div class="new">
+    <img src="https://occ-0-4857-2164.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABc5URtqG36cHmUzXPrn9qaN1prCdZB3Llrhe8w4fvPKUxMp1phgN738mP1ctTe9QshMH8f0NlK-GdSAZDYJpXtvofUffd8o4BQuB7AKZogG-KbG0kR5H5w9kp3pXbogjGHSN.jpg?r=082" alt="" class="posters">
+    <h3>Wednesday</h3>
+    </div>
+    <div class="new">
+    <img src="https://occ-0-4857-2164.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABQEjJfnMi9TXaKoF9qCwqJFr7u4os-0jU4BdQtPpKqA4qlXipyQRbn6x12tiWr3G93tqhHmT_tHefwiPgvORm0tOeEsw-6ZezuwbiWZ6iih6sdwapOruT1QksFSIehXBscq6.jpg?r=5ad" alt="" class="posters">
+    <h3>It's Okay to Not Be Okay</h3>
+    </div>
+    <div class="new">
+    <img src="https://occ-0-4857-2164.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABR871v8B_5W4-2bL3zy0-l1jI1d_kDdYwjnAQXO84kUMxrrbFDunGwXrJN1H_TbQ3qqap3HbzIMjw8HyQuWDGhfgHarGKPtE6JfLZ-awelcRb_ipCja19iEU7yNWXTtp7yvN.jpg?r=347" alt="" class="posters">
+    <h3>Red Notice</h3>
+    </div>
+    <div class="new">
+    <img src="https://occ-0-4857-2164.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABf5exow7YR19ou4F_Afma6lC9npbAZqCyzMa2cU0HVaz0mmeAQ5CkqLy_e8zNzjbZrbug44-W3LpYw4Ne-eVmcQD6n0VIJAw20tvFpphszMy_p5IiA-vBMtBr2n2BPbxuyml.jpg?r=23e" alt="" class="posters">
+    <h3>The Witcher</h3>
+    </div>
+    <div class="new">
+    <img src="https://occ-0-4857-2164.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABfs1djP8b2Vh7ZxtdDBlxo95LAcA11SMdWDsjUKAGawvmsguEnVs15dCDUVxLUZwFJDlTNDDUCxfqvyN-lbOgH08c2fGXNKir-hUbWir55Gi2SSIrsQBMMhxmhhwqY4MLYTs.jpg?r=1d3" alt="" class="posters">
+    <h3>Ginny And Georgia</h3>
+    </div>
+    </div>
+    </section>
+    <section>
+        <h1>Films</h1>
+    <div class="posters">
+    <div class="new">
+    <img src="https://occ-0-4857-2186.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABauaf_pjBXX9G_dl-IYBIWLYWexsTpaSGU0ulKaCMLmsn_ew6nmLGev9nFJJ7bRDMaKAGE0G2Egdgy30VgHbVI7c0-IeOxmMp5j-0AoMIuToZbPzDmGzCQjZIN_OLvtEARjE.jpg?r=3e4" alt="" class="posters">
+    <h3>Queen Of Tears</h3>
+    </div>
+    <div class="new">
+    <img src="https://occ-0-4857-2164.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABQNcmvqUa298uWoIvfqlHQQ2pXCGJtM8MBPOWX2yVC394ityzKyt1cfWE-TZmUa6mhX5BYJ_2d5_MQijbUyIMcnsk0OxjrCYHgexbDwN_jwuDyhWWYwx6aVHUplBAYfBJ3PU.jpg?r=ed2" alt="" class="posters">
+    <h3>Lift</h3>
+    </div>
+    <div class="new">
+    <img src="https://occ-0-4857-2164.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABc_QuOdHzJa9WwBiBlfEvpcFRKq9TAIgdJv0KoSilQZ8JMEsdCdQS4VGD6gwVg2CYCYNhTJIald5uVsXbMf-3QaF1k1fnFRbovQr6ddWUtkSOUzil_dtlD1wOIeD_pSI6pAx.jpg?r=c68" alt="" class="posters">
+    <h3>Stranger Things</h3>
+    </div>
+    <div class="new">
+    <img src="https://occ-0-4857-2164.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABUmLgKmFrl2Tq5jDmIBIdp-L6_fRFsTE7KslWARHa4Yb8f8q32MOBiACOoYAGFn4k8Pc_1P7QlN-F41Btkx4q8bp2gg0yA4kCWxamkIcyRVtyIoln6PDWQVi1_IAZHe4PALj.jpg?r=326" alt="" class="posters">
+    <h3>Money Heist</h3>
+    </div>
+    <div class="new">
+    <img src="https://occ-0-4857-2164.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABc5URtqG36cHmUzXPrn9qaN1prCdZB3Llrhe8w4fvPKUxMp1phgN738mP1ctTe9QshMH8f0NlK-GdSAZDYJpXtvofUffd8o4BQuB7AKZogG-KbG0kR5H5w9kp3pXbogjGHSN.jpg?r=082" alt="" class="posters">
+    <h3>Wednesday</h3>
+    </div>
+    <div class="new">
+    <img src="https://occ-0-4857-2164.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABQEjJfnMi9TXaKoF9qCwqJFr7u4os-0jU4BdQtPpKqA4qlXipyQRbn6x12tiWr3G93tqhHmT_tHefwiPgvORm0tOeEsw-6ZezuwbiWZ6iih6sdwapOruT1QksFSIehXBscq6.jpg?r=5ad" alt="" class="posters">
+    <h3>It's Okay to Not Be Okay</h3>
+    </div>
+    <div class="new">
+    <img src="https://occ-0-4857-2164.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABR871v8B_5W4-2bL3zy0-l1jI1d_kDdYwjnAQXO84kUMxrrbFDunGwXrJN1H_TbQ3qqap3HbzIMjw8HyQuWDGhfgHarGKPtE6JfLZ-awelcRb_ipCja19iEU7yNWXTtp7yvN.jpg?r=347" alt="" class="posters">
+    <h3>Red Notice</h3>
+    </div>
+    <div class="new">
+    <img src="https://occ-0-4857-2164.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABf5exow7YR19ou4F_Afma6lC9npbAZqCyzMa2cU0HVaz0mmeAQ5CkqLy_e8zNzjbZrbug44-W3LpYw4Ne-eVmcQD6n0VIJAw20tvFpphszMy_p5IiA-vBMtBr2n2BPbxuyml.jpg?r=23e" alt="" class="posters">
+    <h3>The Witcher</h3>
+    </div>
+    <div class="new">
+    <img src="https://occ-0-4857-2164.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABfs1djP8b2Vh7ZxtdDBlxo95LAcA11SMdWDsjUKAGawvmsguEnVs15dCDUVxLUZwFJDlTNDDUCxfqvyN-lbOgH08c2fGXNKir-hUbWir55Gi2SSIrsQBMMhxmhhwqY4MLYTs.jpg?r=1d3" alt="" class="posters">
+    <h3>Ginny And Georgia</h3>
+    </div>
+    </div>
+    </section>
+    <section>
+        <h1>Films</h1>
+    <div class="posters">
+    <div class="new">
+    <img src="https://occ-0-4857-2186.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABauaf_pjBXX9G_dl-IYBIWLYWexsTpaSGU0ulKaCMLmsn_ew6nmLGev9nFJJ7bRDMaKAGE0G2Egdgy30VgHbVI7c0-IeOxmMp5j-0AoMIuToZbPzDmGzCQjZIN_OLvtEARjE.jpg?r=3e4" alt="" class="posters">
+    <h3>Queen Of Tears</h3>
+    </div>
+    <div class="new">
+    <img src="https://occ-0-4857-2164.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABQNcmvqUa298uWoIvfqlHQQ2pXCGJtM8MBPOWX2yVC394ityzKyt1cfWE-TZmUa6mhX5BYJ_2d5_MQijbUyIMcnsk0OxjrCYHgexbDwN_jwuDyhWWYwx6aVHUplBAYfBJ3PU.jpg?r=ed2" alt="" class="posters">
+    <h3>Lift</h3>
+    </div>
+    <div class="new">
+    <img src="https://occ-0-4857-2164.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABc_QuOdHzJa9WwBiBlfEvpcFRKq9TAIgdJv0KoSilQZ8JMEsdCdQS4VGD6gwVg2CYCYNhTJIald5uVsXbMf-3QaF1k1fnFRbovQr6ddWUtkSOUzil_dtlD1wOIeD_pSI6pAx.jpg?r=c68" alt="" class="posters">
+    <h3>Stranger Things</h3>
+    </div>
+    <div class="new">
+    <img src="https://occ-0-4857-2164.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABUmLgKmFrl2Tq5jDmIBIdp-L6_fRFsTE7KslWARHa4Yb8f8q32MOBiACOoYAGFn4k8Pc_1P7QlN-F41Btkx4q8bp2gg0yA4kCWxamkIcyRVtyIoln6PDWQVi1_IAZHe4PALj.jpg?r=326" alt="" class="posters">
+    <h3>Money Heist</h3>
+    </div>
+    <div class="new">
+    <img src="https://occ-0-4857-2164.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABc5URtqG36cHmUzXPrn9qaN1prCdZB3Llrhe8w4fvPKUxMp1phgN738mP1ctTe9QshMH8f0NlK-GdSAZDYJpXtvofUffd8o4BQuB7AKZogG-KbG0kR5H5w9kp3pXbogjGHSN.jpg?r=082" alt="" class="posters">
+    <h3>Wednesday</h3>
+    </div>
+    <div class="new">
+    <img src="https://occ-0-4857-2164.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABQEjJfnMi9TXaKoF9qCwqJFr7u4os-0jU4BdQtPpKqA4qlXipyQRbn6x12tiWr3G93tqhHmT_tHefwiPgvORm0tOeEsw-6ZezuwbiWZ6iih6sdwapOruT1QksFSIehXBscq6.jpg?r=5ad" alt="" class="posters">
+    <h3>It's Okay to Not Be Okay</h3>
+    </div>
+    <div class="new">
+    <img src="https://occ-0-4857-2164.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABR871v8B_5W4-2bL3zy0-l1jI1d_kDdYwjnAQXO84kUMxrrbFDunGwXrJN1H_TbQ3qqap3HbzIMjw8HyQuWDGhfgHarGKPtE6JfLZ-awelcRb_ipCja19iEU7yNWXTtp7yvN.jpg?r=347" alt="" class="posters">
+    <h3>Red Notice</h3>
+    </div>
+    <div class="new">
+    <img src="https://occ-0-4857-2164.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABf5exow7YR19ou4F_Afma6lC9npbAZqCyzMa2cU0HVaz0mmeAQ5CkqLy_e8zNzjbZrbug44-W3LpYw4Ne-eVmcQD6n0VIJAw20tvFpphszMy_p5IiA-vBMtBr2n2BPbxuyml.jpg?r=23e" alt="" class="posters">
+    <h3>The Witcher</h3>
+    </div>
+    <div class="new">
+    <img src="https://occ-0-4857-2164.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABfs1djP8b2Vh7ZxtdDBlxo95LAcA11SMdWDsjUKAGawvmsguEnVs15dCDUVxLUZwFJDlTNDDUCxfqvyN-lbOgH08c2fGXNKir-hUbWir55Gi2SSIrsQBMMhxmhhwqY4MLYTs.jpg?r=1d3" alt="" class="posters">
+    <h3>Ginny And Georgia</h3>
+    </div>
+    </div>
+    </section>
 </body>
 </html>
