--- a/netf.html
+++ b/netf.html
@@ -7,23 +7,31 @@
     <link rel="stylesheet" href="netf.css">
 </head>
 <body>
+    <nav>
+        <div class="logo">
+            <img src="./pngwing.com.png" alt="">
+        </div>
+        <div class="action">
+            <button class="Join Now">Join Now</button>
+            <button class="Sign In">Sign In</button>
+        </div>
+    </nav>
+    <!--banner-->
     <div class="banner">
         <div class="bannercontent">
             <div class="bannertitle">
-                <h1 class="bannertitle"></h1>
-                <img src="https://occ-0-4857-2186.1.nflxso.net/dnm/api/v6/tx1O544a9T7n8Z_G12qaboulQQE/AAAABYrHxjkksR9ABkuBU1loIuo-TsJVLJ6TdIPDVCDWZZF3izcAI5LhQiVV1QbO-5jr-NmBfBsSvoXN61f9WOVRfCNI44QgvsK5Hw5vfjrpFOgjJqIoLpnZ29Ei4ADfjLY_g3CmUYL2E7-5Hu1kgquqv98I0OslI9Zo4rqVcpyZweJjO7ZvW_f5iA.png?r=b80">
-                <span>Sector 36</span>
+                <img src="https://occ-0-4857-2186.1.nflxso.net/dnm/api/v6/tx1O544a9T7n8Z_G12qaboulQQE/AAAABYrHxjkksR9ABkuBU1loIuo-TsJVLJ6TdIPDVCDWZZF3izcAI5LhQiVV1QbO-5jr-NmBfBsSvoXN61f9WOVRfCNI44QgvsK5Hw5vfjrpFOgjJqIoLpnZ29Ei4ADfjLY_g3CmUYL2E7-5Hu1kgquqv98I0OslI9Zo4rqVcpyZweJjO7ZvW_f5iA.png?r=b80"><br><br>
+                <h1>Sector 36</h1><br>
                 <h3>2024
-                <span></span>
                 <span>|</span>
                 <span class="box">A</span>
                 <span>|</span>
                 <span>2h 4m</span>
                 <span>|</span>
-                <span>Drama</span>
+                <span>Drama</span><br><br>
                 </h3>
-                <p>When several children disappear at the hands of a serial killer in Sector 36, a corrupt cop is forced to pursue the chilling case at all costs.<br>
-                    <u>Starring:</u>Vikrant Massey, Deepak Dobriyal, Akash Khurana
+                <p>When several children disappear at the hands of a serial killer in Sector <br> 36, a corrupt cop is forced to pursue the chilling case at all costs.<br><br>
+                    <span style="color: #a3a3a3;">Starring:</span> Vikrant Massey, Deepak Dobriyal, Akash Khurana
                 </p>
             </div>
         </div>
